# deep-blueprint

./: .gitignore  .gitlab-ci.yml  =1.9.0  LICENSE  Makefile  README.md  bioblue.sh  pyproject copy.toml  pyproject.toml
.gitlab/: .gitlab-webide.yml
apps/: crop_orientations.py  fiber_peaks.py  image_canny.py  image_gradient.py  predict.py  predict_multi.py  show_multi_volumes.py  show_volumes.py  streamlit_runner.py  test_gabriel.py  threshold_kidneys.py  volume_fourier.py
bioblue/: __init__.py  train.py
bioblue/callback/: __init__.py  classification.py  image.py  mlflow.py  wandb.py
bioblue/conf/: config.yaml
bioblue/conf/dataset/: Deepsun_Classification_GenerateMasks.yaml  base_dataset.yaml  bones.yaml  brain.yaml  deepsun.yaml  hepaticvessel.yaml  kidneys.yaml  mv_fibers.yaml  pa_fibers.yaml  pa_fibers3d.yaml  pa_fibers3d_debug.yaml  pa_synth.yaml  pa_synth_debug.yaml  synthetic.yaml  synthetic_lines.yaml  synthetic_shapes.yaml
bioblue/conf/exp/: 2013-15_CombineLoss.yaml  Bones.yaml  DeepsunBinaryClassification.yaml  DeepsunClassification.yaml  Fibers.yaml  Fibers3d.yaml  Fibers3dDebug.yaml  Fibers3dSynth.yaml  Kidneys.yaml  MIP.yaml  Synthetic.yaml  Threshold.yaml  deepsun.yaml  deepsun2.yaml  deepsun3.yaml  deepsun4.yaml  exp_2013_CombineLoss2.yaml  exp_2013_Sweep_LR.yaml  test.yaml
bioblue/conf/logger/: csv_logger.yaml  mlflow.yaml  tb.yaml  wandb.yaml
bioblue/conf/model/: big_unet.yaml  conf_unet.yaml  unet.yaml
bioblue/conf/module/: base_classification.yaml  base_segmentation.yaml  semantic_blurring.yaml  threshold_segmentation.yaml
bioblue/conf/server/: betelgeuse.yaml  cynosura.yaml  local.yaml  mb-mil102.yaml  mb-rom103.yaml  mbackf2-deepsun.yaml  mbackf2.yaml  mbacknfs.yaml
bioblue/conf/trainer/: betelgeuse.yaml  default.yaml  local.yaml
bioblue/dataset/: DeepsunClassification.py  DeepsunSegmentation.py  __init__.py  abstract_dataset.py  datamodule.py  directory.py  downloadable.py  dvn.py  numpy.py  synthetic.py  thresholdable.py  utils.py
bioblue/dataset/strategy/: __init__.py  abstract_strategy.py  crop.py  download.py  fibers.py  kidneys.py  mip.py  preprocess.py  split.py  visualize.py
bioblue/dataset/transform/: __init__.py  batchgenerators_shim.py  debug.py  pipelines.py  segmentation.py
bioblue/fibers/: __init__.py  fibers.py  orientation.py
bioblue/logger/: mlflow.py
bioblue/loss/: FocalLosses.py  Tversky.py  __init__.py  combo_loss.py  loss_segmentation.py
bioblue/model/: ResnetClassifier.py  __init__.py  blocks.py  conf_resnet.py  conf_unet.py  model_wrapper.py  unet.py  utils.py
bioblue/module/: __init__.py  base_segmentation.py  classification.py  semantic_blurring.py  threshold_segmentation.py
bioblue/module/metrics/: __init__.py  mIoU.py
bioblue/nb/: __init__.py  image_display.py  load.py
bioblue/plot/: cm.py
bioblue/registration/: callbacks.py  utilities.py
bioblue/synthetic/: sheets.py
bioblue/transforms/: Deepsun.py  __init__.py  data_augmentation.py
bioblue/utils/: __init__.py  git.py
deep_blueprint/: __init__.py  train.py
deep_blueprint/callback/: classification.py  image.py
deep_blueprint/conf/: config.yaml
deep_blueprint/conf/dataset/: base_dataset.yaml
deep_blueprint/conf/exp/: test.yaml
deep_blueprint/conf/logger/: none.yaml
deep_blueprint/conf/model/: big_unet.yaml  mobilenetV2.yaml
deep_blueprint/conf/module/: base_classification.yaml  base_segmentation.yaml  semantic_blurring.yaml  threshold_segmentation.yaml
deep_blueprint/conf/server/: local.yaml
deep_blueprint/conf/trainer/: default.yaml
deep_blueprint/dataset/: __init__.py  datamodule.py  mnist.py  numpy.py  utils.py
deep_blueprint/dataset/strategy/: __init__.py  crop.py  default.py  (+3 more)
deep_blueprint/logger/: mlflow.py
deep_blueprint/loss/: combo_loss.py  dice.py  log_cosh_dice.py  loss_segmentation.py  soft_dice.py
deep_blueprint/model/: Resnet.py  ResnetClassifier.py  __init__.py  blocks.py  conf_resnet.py  conf_unet.py  model_wrapper.py  unet.py
deep_blueprint/module/: base_segmentation.py  classification.py  reconstruct.py
deep_blueprint/nb/: __init__.py  inference.py  load.py
deep_blueprint/transforms/: __init__.py  channels.py
deep_blueprint/utils/: gpu.py
hydra_plugins/bioblue_launcher/: launcher.py
notebooks/: Classification_Generate_Masks.ipynb  Classification_testModel.ipynb  Classification_testModel.py  Classification_validation.ipynb  CompareOutputs.ipynb  DebugModel.ipynb  ExploreMasksDataset.ipynb  FiberExperiment.ipynb  Inference.ipynb  Inference.ipynb.REMOVED.git-id  MasksManualRegistration.ipynb  PreprocessDataset.ipynb  UploadPredictionsOnWandB.ipynb  View_mask_generation.ipynb  View_predictions-Copy1.ipynb  View_predictions.ipynb  VolumeViewer-Maite.ipynb
papers/fria/: FRIA_B1_partie_scientifique_EN.docx  FRIA_B1_partie_scientifique_ENv2.docx  FRIA_B1_partie_scientifique_ENv3.docx  FRIA_B1_partie_scientifique_ENv5.docx  gantt-chart.ods
scripts/: bioblue_servers.sh
tests/: conftest.py  test_bioblue.py  test_dataset.py  test_deep_blueprint.py
(+6 files in other folders)
