[tool.poetry]
name = "bioblue"
version = "0.2.0"
description = ""
authors = ["Victor Joos <victor.joos@uclouvain.be>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
numpy = "^1.19"
torch = "^1.7.0"
monai = { extras = ["gdown"], version = "^0.2.0" }
gdown = "^3.11.1"
nibabel = "^3.1.1"
matplotlib = "^3.3.2"
scikit-image = "^0.17.2"
pillow = "^7.2.0"
pytorch-lightning = "^1.0.0"
# vtk = "^9.0.1"
# itk = "^5.1.0"
# itk-texturefeatures = "^3.3.1"
scikit-learn = "^0.23.1"
hydra-core = "^1.0"
# hiplot = "^0.1.18"
mlflow = "^1.14.0"
# optuna = "^2.0.0"
hydra-submitit-launcher = "^1.0.0"
# rawpy = "^0.15.0"
SimpleITK = "^2.0.1"
plotly = "^4.12.0"
jupyter-dash = "^0.3.1"
itkwidgets = "^0.32.0"
# albumentations = "^0.5.1"
# pyvista = "^0.27.0"
boto3 = "^1.16.25"
# gorilla = "^0.3.0"
minio = "^6.0.2"
filelock = "^3.0.12"
ipyaggrid = "^0.2.1"
Jinja2 = "^2.11.2"
batchgenerators = "^0.21"
SharedArray = "^3.2.1"
typer = "^0.3.2"
jedi = "<0.18.0"
ipywebrtc = "^0.5.0"
kornia = "^0.4.1"
albumentations = "^0.5.2"
dill = "^0.3.3"
torchmetrics = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
hypothesis = {extras = ["numpy"], version = "^5.41.2"}
jupyterlab = "<3.0.0"
ipympl = "^0.5.7"
black = "^19.10b0"
jupyterlab-git = "^0.22.2"
mypy = "^0.790"
kaggle = "^1.5.10"

[tool.poetry.scripts]
bioblue = 'bioblue.train:main'

[[tool.poetry.source]]
name = "forge"
url = "https://forge.uclouvain.be/api/v4/projects/1124/packages/pypi"

[tool.pytest.ini_options]
log_cli = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
